--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "pretty": "prettier --write .",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port 80"
   },
   "dependencies": {
     "@titaniumnetwork-dev/ultraviolet": "^2.0.0",
